[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.133", features = ["derive"]}
yaml-rust = "0.4.5"

[dependencies.comment]
path = "../comment"

[dependencies.comment-yaml]
path = "../comment-yaml"

[dependencies.comment-derive]
path = "../comment-derive"

